Fixed header overlap

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -16,5 +16,6 @@
 
 .leaflet-container {
   width: 100%;
-  height: 100vh;
+  top: 75px;
+  height: calc(100vh - 75px);
 }
