--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,7 @@
 .HeaderContainer {
   position: absolute;
   width: 100%;
+  height: 75px;
   top: 0;
   left: 0;
   z-index: 1000;
